@@ -81,6 +81,7 @@
         <maven-shade-plugin.version>3.5.2</maven-shade-plugin.version>
         <!-- END: build dependencies -->
         <valid8j.version>2.1.4</valid8j.version>
+        <jcunit.version>0.8.12</jcunit.version>
     </properties>
 
     <dependencies>
@@ -105,8 +106,19 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-swing</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.dakusui</groupId>
+            <artifactId>jcunit</artifactId>
+            <version>[0.8.12,)</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -138,6 +150,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-swing</artifactId>
+                <version>3.17.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -405,6 +422,13 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
